...
            .fillMaxWidth()
            .border(
                width = 0.dp,
                color = Color.White,
                shape = CutCornerShape(5.dp)
            )
            .testTag("emailTestView")
    )
}

@Composable
fun PasswordTextViewForLogIn(loginViewModel: LoginViewModel){
    TextField(
...
            .fillMaxWidth()
            .border(
                width = 0.dp,
                color = Color.White,
                shape = CutCornerShape(5.dp)
            )
            .testTag("passwordTextView"),
        visualTransformation = PasswordVisualTransformation()
    )
}

@Composable
fun ButtonLogIn(navController: NavController, loginViewModel: LoginViewModel, context: Context){
...
            } else {
                Toast.makeText(context, "Wrong credentials", Toast.LENGTH_LONG).show()
            }
        }},
    ) {
        Text(
            text = "Sign In",
            style = MaterialTheme.typography.headlineSmall,
            fontWeight = FontWeight.Bold
        )
    }
}

...
