package com.example.workbycar.utils

object CountryCodes {

    val countryCodes = listOf(
        "Afghanistan (+93)",
        "Albania (+355)",
        "Algeria (+213)",
        "Andorra (+376)",
        "Angola (+244)",
        "Argentina (+54)",
        "Armenia (+374)",
        "Australia (+61)",
        "Austria (+43)",
        "Azerbaijan (+994)",
...
